update gestion curricular

--- a/gestionCurricular/cursos/templates/base.html
+++ b/gestionCurricular/cursos/templates/base.html
@@ -5,7 +5,7 @@
 		<meta charset="utf-8">
 		<title>{% block title %}Gestión Curricular{% endblock %}</title>
 
-		<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap,min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr79JvoRxT2MZw1T" crossorigin="anonymous">
+		<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
 		<link href="{% static "css/cursos.css" %}" rel="stylesheet">
 		{% block head %}
 		{% endblock %}
@@ -15,7 +15,7 @@
 		{% include "navbar.html" %}
 
 		<div class="container">
-			{# block content %}
+			{% block content %}
 			{% endblock %}
 		</div>
 
