--- a/gestionCurricular/cursos/templates/registration/login.html
+++ b/gestionCurricular/cursos/templates/registration/login.html
@@ -1,6 +1,19 @@
-<h2>Login</h2>
-<form method="post">
-	{% csrf_token %}
-	{{ form.as_p }}
-	<button type="submit">Login</button>
-</form>
+{% extends 'base.html' %}
+
+{% block content %}
+
+<div class="container" style="width: 20rem;">
+	<h4 class="card-title">Ingrese su usuario y clave</h4>
+		<form action="" method="post">
+			{% csrf_token %}
+			<table class="table table-borderless">
+				{{ form.as_table }}
+				<tr>
+					<td colspan="2">
+						<button type="submit" class="btn btn-lg btn-primary btn-block">Log In</button>
+					</td>
+				</tr>
+			</table>
+		</form>
+	</div>
+	{% endblock %}
