--- a/gestionCurricular/cursos/templates/signup.html
+++ b/gestionCurricular/cursos/templates/signup.html
@@ -1,6 +1,15 @@
-<h2>Sign up</h2>
-<form method="post">
-	{% csrf_token %}
-	{{ form.as_p }}
-	<button type="submit">Sign Up</button>
-</form>
+{% extends 'base.html' %}
+
+{% block content %}
+<div class="card">
+	<div class="card-body">
+		<h4 class="card-title">Regístrese Aquí</h4>
+
+		<form method="post">
+			{% csrf_token %}
+			{{ form.as_p }}
+			<button type="submit" class="btn btn-primary btn-block">Sign up</button>
+		</form>
+	</div>
+</div>
+{% endblock %}
