--- a/gestionCurricular/cursos/templates/footer.html
+++ b/gestionCurricular/cursos/templates/footer.html
@@ -1,4 +1,4 @@
 <footer class="page-footer font-small blue">
-	<div class="footer-copyright text-center py-3">© 2019 Copyright: <a href="#">Ingeniería Civil Informática</a>
+	<div class="footer-copyright text-center py-3">© 2019 Copyright: <a href="https://media3.giphy.com/media/E9FG68LI8ICVW/giphy.gif">Ingeniería Civil Informática</a>
 	</div>
 </footer>
