--- a/Hospital/pacientes/templates/navbar.html
+++ b/Hospital/pacientes/templates/navbar.html
@@ -12,6 +12,10 @@
 				<li class="nav-item active">
 					<a class="nav-link" href="{% url 'pacientes' %}">Listado de Pacientes<span class="sr-only">(current)</span></a>
 				</li>
+				<li class="nav-item active">
+					<a class="nav-link" href="{% url 'rutas' %}">Listado de Rutas<span class="sr-only">(current)</span></a>
+				</li>
+
 				<li class="nav-item">
 					<a class="nav-link" href="{% url 'logout' %}">Logout</a>
 				</li>
