--- a/Hospital/pacientes/templates/pacientes.html
+++ b/Hospital/pacientes/templates/pacientes.html
@@ -14,6 +14,8 @@
 		</div>
 {% endfor %}
 	</div>
+</div>
+<div class="container text-center">
 	<a class="btn btn-primary btn-lg" href="/paciente/create/" role="button">Agregar Paciente</a>
 </div>
 {% endblock %}
