--- a/Hospital/pacientes/templates/ruta.html
+++ b/Hospital/pacientes/templates/ruta.html
@@ -7,6 +7,9 @@
 	<hr class="my-4">
 	<p>Información de ruta</p>
 	<a class="btn btn-primary btn-lg" href="/rutas/" role="button">Atrás</a>
+	<a class="btn btn-primary btn-lg" href="https://www.youtube.com/watch?v=NqnKRt_qYbA" role="button">Grupo de Trabajo</a>
+	<a class="btn btn-primary btn-lg" href="https://www.youtube.com/watch?v=AAGFlaTGzd4" role="button">Listado de Pacientes</a>
+
 </div>
 
 {% endblock %}
