--- a/Hospital/pacientes/templates/paciente.html
+++ b/Hospital/pacientes/templates/paciente.html
@@ -7,7 +7,10 @@
 	<hr class="my-4">
 	<p>Rut: {{ paciente.rut }}</p>
 	<p>Domicilio: {{ paciente.domicilio }}</p>
-	<a class="btn btn-primary btn-lg" href="https://www.youtube.com/watch?v=2dbR2JZmlWo" role="button">Asignar a ruta</a>
+	<p>Ruta: {{ paciente.ruta }}</p>
+	<a class="btn btn-primary btn-lg" href="/paciente/{{ paciente.id }}/update2" role="button">Asignar a ruta</a>
 	<a class="btn btn-primary btn-lg" href="/pacientes/" role="button">Atrás</a>
+	<a class="btn btn-primary btn-lg" href="/paciente/{{ paciente.id }}/delete" role="button">Borrar</a>
+	<a class="btn btn-primary btn-lg" href="/paciente/{{ paciente.id }}/update" role="button">Actualizar</a>
 </div>
 {% endblock %}
