--- a/Hospital/pacientes/templates/ruta.html
+++ b/Hospital/pacientes/templates/ruta.html
@@ -8,8 +8,7 @@
 	<p>Información de ruta</p>
 	<a class="btn btn-primary btn-lg" href="/rutas/" role="button">Atrás</a>
 	<a class="btn btn-primary btn-lg" href="#" role="button">Grupo de Trabajo</a>
-	<a class="btn btn-primary btn-lg" href="https://www.youtube.com/watch?v=AAGFlaTGzd4" role="button">Listado de Pacientes</a>
+	<a class="btn btn-primary btn-lg" href="/pacientesEnRuta/{{ ruta.pk }}" role="button">Listado de Pacientes</a>
 
 </div>
-
 {% endblock %}
