--- a/Hospital/pacientes/templates/paciente_form2.html
+++ b/Hospital/pacientes/templates/paciente_form2.html
@@ -6,7 +6,7 @@
 	<form action="" method="post">
 		{% csrf_token %}
 		<table class="table table-boderless">
-			{{ form.ruta }}
+			{{ form.as_table}}
 			<tr>
 				<td colspan="2">
 					<button type="submit" class="btn btn-lg btn-primary btn-block">Guardar</button>
