--- a/Hospital/pacientes/templates/pacientes.html
+++ b/Hospital/pacientes/templates/pacientes.html
@@ -2,20 +2,15 @@
 
 {% block content %}
 
-<h1 class="text-center">Listado de Pacientes</h1>
-<div class="container">
-	<div class="row mt-5 justify-content-center">
+<h1 class="row mt-2 justify-content-center container">Listado de Pacientes</h1>
 {% for paciente in pacientes %}
-		<div class="card" style="width: 20rem;">
-			<div class="card-body">
-				<h5 class="card-title">{{ paciente.primer_nombre }} {{ paciente.apellido_paterno }}</h5>
-				<a href="/paciente/{{ paciente.rut }}" class="card-link">Ir</a>
+<div class="row mt-3 justify-content-center container">
+			<div class="list-group" style="width: 20rem;">
+				<a href="/paciente/{{ paciente.rut }}" class="list-group-item">{{ paciente.primer_nombre }} {{ paciente.apellido_paterno }}</a>
 			</div>
-		</div>
 {% endfor %}
-	</div>
 </div>
 <div class="container text-center">
-	<a class="btn btn-primary btn-lg" href="/paciente/create/" role="button">Agregar Paciente</a>
+	<a class="row mt-3 btn btn-primary btn-lg" href="/paciente/create/" role="button">Agregar Paciente</a>
 </div>
 {% endblock %}
