--- a/Hospital/pacientes/templates/paciente2.html
+++ b/Hospital/pacientes/templates/paciente2.html
@@ -8,9 +8,9 @@
 	<p>Rut: {{ paciente.rut }}</p>
 	<p>Domicilio: {{ paciente.domicilio }}</p>
 	<p>Ruta: {{ paciente.ruta }}</p>
-	<a class="btn btn-primary btn-lg" href="/paciente/{{ paciente.id }}/update2" role="button">Asignar a ruta</a>
-	<a class="btn btn-primary btn-lg" href="/rutas/" role="button">Atrás</a>
+	<a class="btn btn-primary btn-lg" href="/paciente/{{ paciente.id }}/update2" role="button">Cambiar de ruta</a>
+	<a class="btn btn-primary btn-lg" href="/paciente/{{ paciente.id }}/update" role="button">Modificar datos</a>
 	<a class="btn btn-primary btn-lg" href="/paciente/{{ paciente.id }}/delete" role="button">Borrar</a>
-	<a class="btn btn-primary btn-lg" href="/paciente/{{ paciente.id }}/update" role="button">Actualizar</a>
+	<a class="btn btn-primary btn-lg" href="/rutas/" role="button">Atrás</a>
 </div>
 {% endblock %}
