--- a/Hospital/pacientes/templates/footer.html
+++ b/Hospital/pacientes/templates/footer.html
@@ -1,4 +1,4 @@
 <footer class="page-footer font-small blue">
-	<div class="footer-copyright text-center py-3">© 2019 Copyright: <a href="https://media3.giphy.com/media/E9FG68LI8ICVW/giphy.gif">Your Mom</a>
+	<div class="footer-copyright text-center py-3">© 2019 Copyright: <a href="#"></a>
 	</div>
 </footer>
