--- a/Hospital/pacientes/templates/pacientesenruta.html
+++ b/Hospital/pacientes/templates/pacientesenruta.html
@@ -4,10 +4,10 @@
 
 
 <h1 class="row mt-2 justify-content-center container">Pacientes en Ruta</h1>
-	{% for paciente in pacientes %}
-	{% if not pacientes%}
-		<p>Ruta no tiene pacientes</p>
+	{% if not pacientes %}
+		<h4 class="row mt-4 justify-content-center container">Ruta no tiene pacientes</h4>
 	{% endif%}
+	{% for paciente in pacientes %}
 		<div class="row mt-2 justify-content-center container">
 			<div class="list-group" style="width: 20rem;">
 				<a href="/ruta/paciente/{{ paciente.rut }}" class="list-group-item">{{ paciente.primer_nombre }} {{ paciente.apellido_paterno }}</a>
@@ -15,6 +15,6 @@
 		</div>
 	{% endfor %}
 <div class="container text-center">
-	<a class="row mt-3 btn btn-primary btn-lg" href="/rutas" role="button">Atras</a>
+	<a class="row mt-3 justify-content-center btn btn-primary btn-lg" href="/rutas" role="button">Atras</a>
 </div>
 {% endblock %}
