--- a/HospitalizacionDomiciliaria/ruta/templates/ruta/ruta.html
+++ b/HospitalizacionDomiciliaria/ruta/templates/ruta/ruta.html
@@ -1,5 +1,33 @@
 {% extends 'core/base.html' %}
 
 {% block content %}
-<h1> holoooooooooooooooooo</h1>
+
+{% load static %}
+
+    <meta charset="utf-8" />
+    <title>Leaflet OSRM Example</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no" />
+    <link rel="stylesheet" href="https://unpkg.com/leaflet@1.3.1/dist/leaflet.css" />
+    <link rel="stylesheet" href="{% static 'ruta/css/leaflet-routing-machine.css' %}" />
+    <link rel="stylesheet" href="{% static 'ruta/js/index.js'%}" />
+    <style>
+        .map {
+            position: absolute;
+            width: 100%;
+            height: 100%;
+        }
+    </style>
+
+<body>
+    <div id="map" class="map"></div>
+    <script src="https://unpkg.com/leaflet@1.3.1/dist/leaflet.js"></script>
+    <script src="{% static 'ruta/js/leaflet-routing-machine.js' %}"></script>
+    <script src="{% static 'ruta/js/Control.Geocoder.js' %}"></script>
+    <<script src="{% static 'ruta/js/config.js'%}"></script>
+    <script src="{% static 'ruta/js/index.js'%}"></script>
+    <!--<script src="{% static 'ruta/js/mapa.js'%}"></script>-->
+    <!--<script src="{% static 'ruta/js/Control.Geocoder.js'%}"></script>-->
+</body>
+
+
 {% endblock %}
