--- a/HospitalizacionDomiciliaria/ruta/templates/ruta/ruta.html
+++ b/HospitalizacionDomiciliaria/ruta/templates/ruta/ruta.html
@@ -9,7 +9,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no" />
     <link rel="stylesheet" href="https://unpkg.com/leaflet@1.3.1/dist/leaflet.css" />
     <link rel="stylesheet" href="{% static 'ruta/css/leaflet-routing-machine.css' %}" />
-    <link rel="stylesheet" href="{% static 'ruta/js/index.js'%}" />
+    <!--<link rel="stylesheet" href="{% static 'ruta/js/index.js'%}" />-->
     <style>
         .map {
             position: absolute;
@@ -23,10 +23,10 @@
     <script src="https://unpkg.com/leaflet@1.3.1/dist/leaflet.js"></script>
     <script src="{% static 'ruta/js/leaflet-routing-machine.js' %}"></script>
     <script src="{% static 'ruta/js/Control.Geocoder.js' %}"></script>
-    <<script src="{% static 'ruta/js/config.js'%}"></script>
-    <script src="{% static 'ruta/js/index.js'%}"></script>
-    <!--<script src="{% static 'ruta/js/mapa.js'%}"></script>-->
-    <!--<script src="{% static 'ruta/js/Control.Geocoder.js'%}"></script>-->
+    <script src="{% static 'ruta/js/config.js'%}"></script>
+    <!--<script src="{% static 'ruta/js/index.js'%}"></script>-->
+    <!--<script src="{% static 'ruta/js/lrm-valhalla.js'%}"></script>-->
+    <script src="{% static 'ruta/js/mapa.js'%}"></script>
 </body>
 
 
