se agrego el apartado de registro de pacientes en usuarios, para poder visualizar pacientes y trabajar con ellos

--- a/HospitalizacionDomiciliaria/registration/templates/registration/usuarios.html
+++ b/HospitalizacionDomiciliaria/registration/templates/registration/usuarios.html
@@ -2,6 +2,7 @@
 
 {% block content %}
 <ul class="nav-item">
-        <a class="nav-link text-dark" href="{% url 'registro' %}">Registro Funcionario</a>
+        <a class="nav-link text-dark" href="{% url 'registroFuncionario' %}">Registro Funcionario</a>
+        <a class="nav-link text-dark" href="{% url 'registroPaciente' %}">Registro Paciente</a>
 </ul>
 {% endblock %}
