--- a/HospitalizacionDomiciliaria/reportes/templates/reportes/reportes.html
+++ b/HospitalizacionDomiciliaria/reportes/templates/reportes/reportes.html
@@ -14,7 +14,11 @@
     </div>
     <div class="col-8">
       <div class="tab-content" id="nav-tabContent">
-        <div class="tab-pane fade show active" id="list-home" role="tabpanel" aria-labelledby="list-home-list">Cuadro para escribir  --  pequeño resumen (enfermedad, tratamiento, edad,etc) en caso de que el visualizador no recuerde bien los nombres</div>
+        <div class="tab-pane fade show active" id="list-home" role="tabpanel" aria-labelledby="list-home-list">
+          <textarea class="form-control" id="exampleFormControlTextarea1" rows="10">
+              Cuadro para escribir  --  pequeño resumen (enfermedad, tratamiento, edad,etc) en caso de que el visualizador no recuerde bien los nombres
+          </textarea>
+        </div>
         <div class="tab-pane fade" id="list-profile" role="tabpanel" aria-labelledby="list-profile-list">Historial de reportes</div>
         <div class="tab-pane fade" id="list-messages" role="tabpanel" aria-labelledby="list-messages-list">
           <textarea name="comentarios" style="width: 98%">Escribe aquí tus comentarios</textarea>
