--- a/HospitalizacionDomiciliaria/core/templates/core/base.html
+++ b/HospitalizacionDomiciliaria/core/templates/core/base.html
@@ -62,6 +62,11 @@
                         <a class="nav-link text-dark" href="{% url 'reportes' %}">reportes</a>
                     </li>
                     {% endif %}
+                    {% if request.user.is_authenticated %}
+                    <li class="nav-item">
+                        <a class="nav-link text-dark" href="{% url 'visitaPacientes' %}">Visita Pacientes</a>
+                    </li>
+                    {% endif %}
                 </ul>
             </div>
         </nav>
