Cambio msje notificacion de guardado reporte

--- a/HospitalizacionDomiciliaria/reportes/templates/reportes/reportes.html
+++ b/HospitalizacionDomiciliaria/reportes/templates/reportes/reportes.html
@@ -129,7 +129,7 @@
     document.getElementById("cardEdad").innerHTML=`${listapacientes[numId]["edad"]}`;
   }
 function saveReport(id){
-    alert("reporte de paciente con id " + numId + " guardado (habilitado cuando se construya base de datos)");
+    alert("reporte de paciente  " + listapacientes[numId]["name"] + " guardado (habilitado cuando se construya base de datos)");
 }
 
 </script>
