--- a/HospitalizacionDomiciliaria/visitaPacientes/templates/visitaPacientes/visitaPaciente.html
+++ b/HospitalizacionDomiciliaria/visitaPacientes/templates/visitaPacientes/visitaPaciente.html
@@ -22,7 +22,7 @@
   <!--Columna Derecha-->
   <div class="col-8">
     <div class="tab-content" id="nav-tabContent">
-      <!--Cuadro de Texto-->
+      <!--Calendario-->
       <!--<meta charset="utf-8" />
       <link rel="stylesheet" href="http://code.jquery.com/ui/1.10.1/themes/base/jquery-ui.css" />
       <script src="http://code.jquery.com/jquery-1.9.1.js"></script>
