cambio en base.html

--- a/HospitalizacionDomiciliaria/core/templates/core/base.html
+++ b/HospitalizacionDomiciliaria/core/templates/core/base.html
@@ -59,7 +59,7 @@
                     {% endif %}
                     {% if request.user.is_authenticated %}
                     <li class="nav-item">
-                        <a class="nav-link text-dark" href="{% url 'reportes' %}">reportes</a>
+                        <a class="nav-link text-dark" href="{% url 'reportes' %}">Reportes</a>
                     </li>
                     {% endif %}
                     {% if request.user.is_authenticated %}
