--- a/HospitalizacionDomiciliaria/core/templates/core/home.html
+++ b/HospitalizacionDomiciliaria/core/templates/core/home.html
@@ -1,5 +1,5 @@
 {% extends 'core/base.html' %}
 
 {% block content %}
-<h1>Cuidamos a nuestros pacientes</h1>
+<h1 id="titulo-home-page">Cuidamos a nuestros pacientes</h1>
 {% endblock %}
