--- a/HospitalizacionDomiciliaria/core/templates/core/base.html
+++ b/HospitalizacionDomiciliaria/core/templates/core/base.html
@@ -14,13 +14,15 @@
     <script src="{% static 'core/js/jquery-3.4.1.min.js' %}" type="text/javascript"></script>
     <script src="{% static 'core/js/bootstrap.bundle.js' %}" type="text/javascript"></script>
 
+    <link href="https://fonts.googleapis.com/css?family=Abel&display=swap" rel="stylesheet">
+
 </head>
 
 
 <body>
     <!--HEADER-->
     <header>
-        <nav class="navbar navbar-expand-sm navbar-toggleable navbar-light bg-white
+        <nav class="navbar navbar-expand-sm navbar-toggleable navbar-light
             border-bottom box-shadow mb-3">
             <div>
                 <a class="navbar-brand" href="{% url 'home' %}" > <img src="{% static 'core/img/uhd.png' %}" class="imglogo"/></a>
