cambios menores del logo y backlog agregado

--- a/HospitalizacionDomiciliaria/core/templates/core/base.html
+++ b/HospitalizacionDomiciliaria/core/templates/core/base.html
@@ -23,7 +23,7 @@
         <nav class="navbar navbar-expand-sm navbar-toggleable navbar-light bg-white
             border-bottom box-shadow mb-3">
             <div>
-                <a class="navbar-brand" href="{% url 'home' %}" > <img src="{% static 'core/img/uhd.png' %}" class="imglogo"/></a>
+                <a class="navbar-brand" href="{% url 'home' %}" > <img src="{% static 'core/img/uhd_smal_without_bg.png' %}" class="imglogo"/></a>
 
                 <button class="navbar-toggler" type="button" data-toggle="collapse" data-target=".navbar-collapse"
                     aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
