--- a/HospitalizacionDomiciliaria/core/static/core/css/style.css
+++ b/HospitalizacionDomiciliaria/core/static/core/css/style.css
@@ -1,7 +1,109 @@
+h2 {
+    display: block;
+    font-size: 1.5em;
+    margin-block-start: 0.83em;
+    margin-block-end: 0.83em;
+    margin-inline-start: 0px;
+    margin-inline-end: 0px;
+    font-weight: bold;
+}
+
 .imglogo{
     max-width: 90%
 }
 
 .navbar-brand{
     max-width: 90%
+}
+
+.base-body{
+    background-color: #E8FAFC;
+}
+
+.base-nav{
+    background-color: #243547;
+}
+
+.box-position{
+    width: 100%;
+    min-height: 100vh; 
+    display: -webkit-box;
+    display: -webkit-flex;
+    display: -moz-box;
+    display: -ms-flexbox;
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: center;
+    align-items: center;
+    padding: 15px;
+    background: #e9faff;
+}
+
+.box-parameters {
+    padding: 10px;
+    width: 600px;
+    margin-top: 5px;
+    margin-bottom: 5%;
+    background: #fff;
+    border-radius: 10px;
+    overflow: hidden;
+  
+    box-shadow: 0 3px 20px 0px rgba(0, 0, 0, 0.1);
+    -moz-box-shadow: 0 3px 20px 0px rgba(0, 0, 0, 0.1);
+    -webkit-box-shadow: 0 3px 20px 0px rgba(0, 0, 0, 0.1);
+    -o-box-shadow: 0 3px 20px 0px rgba(0, 0, 0, 0.1);
+    -ms-box-shadow: 0 3px 20px 0px rgba(0, 0, 0, 0.1);
+}
+
+
+/* List of patients */
+
+* {
+    box-sizing: border-box;
+}
+  
+#myInput {
+    background-image: url('/css/searchicon.png');
+    background-position: 10px 12px;
+    background-repeat: no-repeat;
+    width: 100%;
+    font-size: 16px;
+    padding: 12px 20px 12px 40px;
+    border: 1px solid #ddd;
+    margin-bottom: 12px;
+}
+  
+#myUL {
+    list-style-type: none;
+    padding: 0;
+    margin: 0;
+}
+  
+#myUL li a {
+    border: 1px solid #ddd;
+    margin-top: -1px; /* Prevent double borders */
+    background-color: rgba(177, 216, 238, 0.356);
+    padding: 12px;
+    text-decoration: none;
+    font-size: 18px;
+    color: black;
+    display: block;
+}
+  
+#myUL li a:hover:not(.header) {
+    background-color: #243547;
+    color: #f8f9fa;
+}
+
+.text-centered{
+    text-align: center;
+}
+
+.save-button{
+    background-color: rgba(177, 216, 238, 0.356);
+}
+
+.save-button:hover:not(.header) {
+    background-color: #243547;
+    color: #f8f9fa;
 }
